force-app/main/default/objects/SurveyTemplateItem__c/SurveyTemplateItem__c.object-meta.xml
<CustomObject>
    <label>Survey Template Item</label>
    <nameField>
        <label>Survey TemplateItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Template Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>