force-app/main/default/objects/SurveyTemplateItem__c/fields/CustomStyle__c.field-meta.xml
<CustomField>
    <fullName>CustomStyle__c</fullName>
    <description>Custom CSS Style for your survey</description>
    <inlineHelpText>Custom CSS Style for your survey</inlineHelpText>
    <label>Custom Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>