force-app/main/default/objects/SurveyTemplateItem__c/fields/hasChild__c.field-meta.xml
<CustomField>
    <fullName>hasChild__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Question Has Sub Question Related</description>
    <inlineHelpText>Question Has Sub Question Related</inlineHelpText>
    <label>hasChild</label>
    <type>Checkbox</type>
</CustomField>