force-app/main/default/objects/SurveyTemplateItem__c/fields/SurveyTemplate__c.field-meta.xml
<CustomField>
    <fullName>SurveyTemplate__c</fullName>
    <label>Survey Template</label>
    <referenceTo>SurveyTemplate__c</referenceTo>
    <relationshipLabel>Survey Template Items</relationshipLabel>
    <relationshipName>SurveyTemplateItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>